start final project and security